[package]
name = "winner_actor"
version = "0.1.0"
authors = ["Bas Zalmstra <zalmstra.bas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.11.1"
actix_derive = "0.6.0"
env_logger = "0.8.3"
anyhow = "1.0.40"
thiserror = "1.0.24"
winner_server = { path="../winner_server" }
rand = "0.8.3"
