[package]
name = "winner_cli"
version = "0.1.0"
authors = ["Tim de Jager <tdejager89@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# For testing and types
winner_server = { path = "../winner_server"}
futures = "0.3.12"
serde = "1.0.123"
serde_json = "1"
serde_derive = "1.0.123"
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-serde = {version = "0.8", features = ["json"] }
tokio-util = { version = "0.6", features = ["codec"] }
