[package]
name = "winner_server"
version = "0.1.0"
authors = ["Tim de Jager"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.123"
serde_derive = "1.0.123"
futures = "0.3.12"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
