[package]
name = "winner_server"
version = "0.1.0"
authors = ["Tim de Jager"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
serde = "1.0.123"
serde_json = "1"
serde_derive = "1.0.123"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tokio-serde = {version = "0.8", features = ["json"] }
tokio-util = { version = "0.6", features = ["codec"] }
